# PatternAvenue

./: AirForce.h  AirForceFactory.cpp  AirForceFactory.h  AirForceUniform.cpp  AirForceUniform.h  AirborneAttack.cpp  AirborneAttack.h  Ambush.cpp  Ambush.h  Army.h  ArmyFactory.h  ArmyUniform.cpp  ArmyUniform.h  AttackStrategy.cpp  AttackStrategy.h  Blockade.h  Census.cpp  Census.h  CivilianContext.cpp  CivilianContext.h  CivilianState.h  Command.h  ConcreteGuns.cpp  ConcreteGuns.h  Country.cpp  Country.h  DefendCommand.h  DefenseStrategy.cpp  DefenseStrategy.h  Enlisted.cpp  Enlisted.h  Flank.cpp  Flank.h  Fleeing.cpp  Fleeing.h  Fortification.cpp  Fortification.h  Guns.cpp  Guns.h  HighGround.cpp  (+41 more)
Decorater/: AirForceUniform.cpp  AirForceUniform.h  ArmyUniform.h  Main.cpp  NavyUniform.h  Uniform.cpp  main
Decorator Tests/: ArmyUniform.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  Military.h  Testing.h  Testom.cpp  Uniform.cpp  Uniform.h  main.cpp  (+2 more)
Factory Tests/: ArmyFactory.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  MilitaryFactory_unittest.cpp  cmake_install.cmake  main.cpp  runTests
State Tests/: CMakeCache.txt  CMakeLists.txt  CivilianContext.cpp  CivilianContext.h  CivilianState.h  Enlisted.cpp  Fleeing.cpp  Fleeing.h  Makefile  Refugee.cpp  Refugee.h  Reserve.cpp  State_unittest.cpp  cmake_install.cmake  main.cpp  runTests
Strategy + Command Tests/: AirForce.cpp  AirForce.h  AirborneAttack.h  Ambush.h  Army.cpp  Army.h  Blockade.cpp  Blockade.h  CMakeCache.txt  CMakeLists.txt  Command.cpp  Command.h  DefendCommand.cpp  DefendCommand.h  HigherPowers.h  Makefile  Military.h  Minefield.h  Navy.cpp  Navy.h  Retreat.h  Strategy_unittest.cpp  attackCommand.h  cmake_install.cmake  main.cpp  runTests
(+47 files in other folders)
